# DMIDR

./: .gitignore  README.md  app.py  environment.yml  pyproject.toml  recover_and_continue.sh  requirements.txt  run_all.sh
configs/: example.env
configs/gromacs/: md.mdp  minim.mdp  npt.mdp  nvt.mdp
data/input/: All.fasta  example.fasta
data/input/sequences/: example.fasta
legacy/: analyze_idr_md.py  compare_plots.py  runDocker.sh  run_Dispredict_M.sh  run_analysis.py  run_mutaion_V2.py  run_mutaion_V3.py
mdp/: md.mdp  minim.mdp  npt.mdp  nvt.mdp
notebooks/: AnalyzeResults.ipynb  CollectData.ipynb  NewAnalysis_V2.ipynb  anaysisi.ipynb  inputStructure.ipynb  stats.ipynb
notebooks/Random/: AnalyzeResults.ipynb  pymolJupyter.ipynb  run_Dispredict.sh  run_Dispredict_M.sh  run_Pssm.sh  run_mutaion_V4.py
scripts/: analyze_disorder.py  analyze_md.py  calculate_asa.py  compare_md_runs.py  download_esmdispred_models.sh  fix_pdb.py  generate_msa_laptop.sh  generate_msa_remote.sh  generate_mutants.py  plot_summary_figures.py  run_asa_all.sh  run_colabfold.sh  run_dispredict.sh  run_esmdispred.sh  run_esmdispred_single.sh  run_gromacs.sh  run_gromacs_inner.sh  run_pipeline.sh  run_pssm.sh  select_candidates.py  split_fasta.py
scripts/esmdispred/: DisoComb.sh
src/idr_project/: __init__.py  disorder_analysis.py  io_utils.py  md_analysis.py  mutant_generator.py
